// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experiment/reducer LOAD 1`] = `
Object {
  "error": null,
  "id": null,
  "loading": true,
  "name": null,
}
`;

exports[`experiment/reducer LOAD_ERROR 1`] = `
Object {
  "error": "test error",
  "fileLoading": false,
  "id": null,
  "loading": false,
  "name": null,
}
`;

exports[`experiment/reducer LOAD_SUCCESS 1`] = `
Object {
  "error": null,
  "id": null,
  "loading": false,
  "name": null,
}
`;

exports[`experiment/reducer SET_EXPERIMENT 1`] = `
Object {
  "error": null,
  "id": 1,
  "loading": true,
  "name": "test name",
}
`;
